fixed alignment issues on dashboard

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -68,8 +68,9 @@ input:focus, select:focus, textarea:focus {
     background: #fff url(../images/skin/shadow.jpg) bottom repeat-x;
     border: 1px solid #ccc;
     border-style: solid none solid none;
-    margin-top: 5px;
+    margin-top: 0px;
     padding: 7px 12px;
+    text-align: left;
 }
 
 .menuButton {
